--- a/views/words.ejs
+++ b/views/words.ejs
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ejs rendered</title>
 </head>
 <body>
     <h1>im in ejs, rendered!</h1>
+   <p><%=pageTitle%></p>
+    <form method="POST" action="/saveMyName">
+        <input name="myName">
+        <input type="submit" value="save my name!">
+
+    </form>
+    <h2>here is get</h2>
+    <form method="GET" action="/saveMyNameGet">
+        <input name="myName">
+        <input type="submit" value="save my name get!">
+
+    </form>
 </body>
 </html>
